--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -28,12 +28,14 @@ jobs:
       - name: Upload SARIF via REST API
         run: |
           # Encode SARIF file to base64 (no line wrapping)
-          # base64 -w0 trivy-results.sarif > sarif.b64
-          SARIF_BASE64=$(base64 -w0 trivy-results.sarif)
-          env
+          base64 -w0 trivy-results.sarif > sarif.b64
+          ls -la          
 
           jq -n \
-            '{ commit_sha: $GITHUB_SHA, ref: $GITHUB_REF, sarif: SARIF_BASE64 }' > payload.json
+            --arg commit_sha "$GITHUB_SHA" \
+            --arg ref "$GITHUB_REF" \
+            --slurpfile sarif sarif.b64 \
+            '{ commit_sha: $commit_sha, ref: $ref, sarif: $sarif }' > payload.json
 
           # HTTP_STATUS=$(curl -s -o response.json -w "%{http_code}" \
           #   -H "Accept: application/vnd.github+json" \
