--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -34,7 +34,7 @@ jobs:
           jq -n \
             --arg commit_sha "$GITHUB_SHA" \
             --arg ref "$GITHUB_REF" \
-            --slurpfile sarif sarif.b64 \
+            --rawfile sarif sarif.b64 \
             '{ commit_sha: $commit_sha, ref: $ref, sarif: $sarif }' > payload.json
 
           # HTTP_STATUS=$(curl -s -o response.json -w "%{http_code}" \
