--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -37,12 +37,12 @@ jobs:
             --rawfile sarif sarif.b64 \
             '{ commit_sha: $commit_sha, ref: $ref, sarif: $sarif }' > payload.json
 
-          # HTTP_STATUS=$(curl -s -o response.json -w "%{http_code}" \
-          #   -H "Accept: application/vnd.github+json" \
-          #   -H "Authorization: token ${{ secrets.TOKEN }}" \
-          #   -H "Content-Type: application/json" \
-          #   --data-binary @payload.json \
-          #   "https://api.github.com/repos/${{ github.repository }}/code-scanning/sarifs")
+          HTTP_STATUS=$(curl -s -o response.json -w "%{http_code}" \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: token ${{ secrets.TOKEN }}" \
+            -H "Content-Type: application/json" \
+            --data-binary @payload.json \
+            "https://api.github.com/repos/${{ github.repository }}/code-scanning/sarifs")
 
           
           # echo "HTTP status: $HTTP_STATUS"
