--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -29,7 +29,8 @@ jobs:
         run: |
           # Encode SARIF file to base64 (no line wrapping)
           base64 -w0 results.sarif.gz > sarif.b64
-          ls -la          
+          ls -la      
+          env    
 
           jq -n \
             --arg commit_sha "$GITHUB_SHA" \
