--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,4 +1,4 @@
-name: cd_permanent_preview
+name: cd_production
 
 on:
   push:
@@ -9,7 +9,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     concurrency:
-      group: cd-permanent-preview
+      group: cd-production
       cancel-in-progress: true
     steps:
       - name: Checkout app
@@ -29,26 +29,26 @@ jobs:
         uses: ./platform/.github/actions/build
         with:
           app_name: flask-react-template
-          tag: preview
+          tag: production
           context: app/.
           docker_registry: ${{ vars.DOCKER_REGISTRY }}
           docker_username: ${{ vars.DOCKER_USERNAME }}
           docker_password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Deploy to permanent preview
+      - name: Deploy to production
         uses: ./platform/.github/actions/deploy
         with:
           app_name: flask-react-template
-          app_env: preview
-          app_hostname: preview.flask-react-template.platform.bettrhq.com
+          app_env: production
+          app_hostname: flask-react-template.platform.bettrhq.com
           branch: main
           deploy_id: ${{ github.run_number }}
           deploy_root: app/lib/kube
-          deploy_labels: gh/env=preview
+          deploy_labels: gh/env=production
           deploy_image: ${{ steps.build.outputs.image_ref }}
           docker_registry: ${{ vars.DOCKER_REGISTRY }}
           docker_username: ${{ vars.DOCKER_USERNAME }}
           docker_password: ${{ secrets.DOCKER_PASSWORD }}
           do_access_token: ${{ secrets.DO_ACCESS_TOKEN }}
           do_cluster_id: ${{ vars.DO_CLUSTER_ID }}
-          doppler_token: ${{ secrets.DOPPLER_PREVIEW_TOKEN }}
+          doppler_token: ${{ secrets.DOPPLER_PRODUCTION_TOKEN }}
