--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,56 +7,28 @@ on:
 jobs:
   deploy:
     if: github.event.pull_request.state == 'open' && github.event.pull_request.draft == false
-    runs-on: ubuntu-latest
+    uses: jalantechnologies/github-ci/.github/workflows/ci.yml@v3.2.5
     concurrency:
       group: cd-preview-${{ github.event.pull_request.head.ref }}
       cancel-in-progress: true
-    steps:
-      - name: Checkout app
-        uses: actions/checkout@v3
-        with:
-          path: app
-
-      - name: Checkout github-ci
-        uses: actions/checkout@v3
-        with:
-          repository: jalantechnologies/github-ci
-          path: platform
-          ref: v2.5
-
-      - name: Extract branch name
-        id: extract_branch
-        run: |
-          BRANCH_NAME=$(echo ${{ github.event.pull_request.head.ref }} | sed -e 's/^refs\/heads\///g')
-          BRANCH_HASH=$(sha1sum < <(printf '%s' $BRANCH_NAME) | cut -c -15)
-          echo "branch_hash=$(echo $BRANCH_HASH)" >> $GITHUB_OUTPUT
-
-      - name: Build Docker image
-        id: build
-        uses: ./platform/.github/actions/build
-        with:
-          app_name: flask-react-template
-          tag: ${{ steps.extract_branch.outputs.branch_hash }}
-          build_args: APP_ENV=preview
-          context: app/.
-          docker_registry: ${{ vars.DOCKER_REGISTRY }}
-          docker_username: ${{ vars.DOCKER_USERNAME }}
-          docker_password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Deploy to DigitalOcean
-        uses: ./platform/.github/actions/deploy
-        with:
-          app_name: flask-react-template
-          app_env: preview
-          app_hostname: '{1}.preview.platform.bettrhq.com'
-          branch: ${{ github.event.pull_request.head.ref }}
-          deploy_id: ${{ github.run_number }}
-          deploy_root: app/lib/kube
-          deploy_labels: gh/pr=${{ github.event.number }}
-          deploy_image: ${{ steps.build.outputs.image_ref }}
-          docker_registry: ${{ vars.DOCKER_REGISTRY }}
-          docker_username: ${{ vars.DOCKER_USERNAME }}
-          docker_password: ${{ secrets.DOCKER_PASSWORD }}
-          do_access_token: ${{ secrets.DO_ACCESS_TOKEN }}
-          do_cluster_id: ${{ vars.DO_CLUSTER_ID }}
-          doppler_token: ${{ secrets.DOPPLER_PREVIEW_TOKEN }}
+    with:
+      hosting_provider: ${{ vars.HOSTING_PROVIDER }}
+      app_name: flask-react-template
+      app_env: preview
+      app_hostname: '{1}.preview.platform.bettrhq.com'
+      branch: ${{ github.event.pull_request.head.ref }}
+      build_args: |
+        APP_ENV=preview
+      checks: "[]"
+      docker_registry: ${{ vars.DOCKER_REGISTRY }}
+      docker_username: ${{ vars.DOCKER_USERNAME }}
+      aws_cluster_name: ${{ vars.AWS_CLUSTER_NAME }}
+      aws_region: ${{ vars.AWS_REGION }}
+      pull_request_number: ${{ github.event.number }}
+      do_cluster_id: ${{ vars.DO_CLUSTER_ID }}
+    secrets:
+      docker_password: ${{ secrets.DOCKER_PASSWORD }}
+      doppler_token: ${{ secrets.DOPPLER_PREVIEW_TOKEN }}
+      aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      do_access_token: ${{ secrets.DO_ACCESS_TOKEN }}
