--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -6,49 +6,49 @@ on:
     types: [opened, synchronize, reopened,ready_for_review]
 
 jobs:
-  # upload_artifacts:
-  #   needs: preview
-  #   runs-on: ubuntu-latest
-  #   steps:
-      # - name: Download Artifact
-      #   uses: actions/download-artifact@v4
-      #   with:
-      #     name: trivy-results
-      #     path: ./
+  upload_artifacts:
+    needs: preview
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: trivy-results
+          path: ./
       
-      # - name: List files to confirm path
-      #   run: pwd
+      - name: List files to confirm path
+        run: pwd
 
-      # - name: gzip files to confirm path
-      #   run: gzip -c trivy-results.sarif > results.sarif.gz
+      - name: gzip files to confirm path
+        run: gzip -c trivy-results.sarif > results.sarif.gz
 
-      # - name: List files to confirm path
-      #   run: ls -la
+      - name: List files to confirm path
+        run: ls -la
 
-      # - name: Upload SARIF via REST API
-      #   run: |
-      #     # Encode SARIF file to base64 (no line wrapping)
-      #     base64 -w0 results.sarif.gz > sarif.b64
-      #     ls -la      
-      #     env    
+      - name: Upload SARIF via REST API
+        run: |
+          # Encode SARIF file to base64 (no line wrapping)
+          base64 -w0 results.sarif.gz > sarif.b64
+          ls -la      
+          env    
 
-      #     jq -n \
-      #       --arg commit_sha "$GITHUB_SHA" \
-      #       --arg ref "$GITHUB_REF" \
-      #       --rawfile sarif sarif.b64 \
-      #       '{ commit_sha: $commit_sha, ref: $ref, sarif: $sarif }' > payload.json
+          jq -n \
+            --arg commit_sha "$GITHUB_SHA" \
+            --arg ref refs/head/main \
+            --rawfile sarif sarif.b64 \
+            '{ commit_sha: $commit_sha, ref: $ref, sarif: $sarif }' > payload.json
 
-      #     HTTP_STATUS=$(curl -s -o response.json -w "%{http_code}" \
-      #       -H "Accept: application/vnd.github+json" \
-      #       -H "Authorization: token  $GITHUB_TOKEN" \
-      #       -H "Content-Type: application/json" \
-      #       --data-binary @payload.json \
-      #       "https://api.github.com/repos/jalantechnologies/flask-react-template/code-scanning/sarifs")
+          HTTP_STATUS=$(curl -s -o response.json -w "%{http_code}" \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: token  $GITHUB_TOKEN" \
+            -H "Content-Type: application/json" \
+            --data-binary @payload.json \
+            "https://api.github.com/repos/jalantechnologies/flask-react-template/code-scanning/sarifs")
 
           
-      #     echo "HTTP status: $HTTP_STATUS"
-      #     echo "API response:"
-      #     cat response.json | jq .
+          echo "HTTP status: $HTTP_STATUS"
+          echo "API response:"
+          cat response.json | jq .
 
   preview:
     # Run only if PR is open and not draft
