added preview on pr update

--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -76,6 +76,7 @@ jobs:
       pull_request_number: ${{ github.event.number }}
       sonar_host_url: ${{ vars.SONAR_HOST_URL }}
       do_cluster_id: ${{ vars.DO_CLUSTER_ID }}
+      target_sha : ${{ github.sha }}
     
     secrets:
       docker_password: ${{ secrets.DOCKER_PASSWORD }}
