--- a/.github/workflows/preview_on_pr_update.yml
+++ b/.github/workflows/preview_on_pr_update.yml
@@ -81,6 +81,7 @@ jobs:
       do_cluster_id: ${{ vars.DO_CLUSTER_ID }}
       target_sha : ${{ github.sha }}
       target_repository : jalantechnologies/flask-react-template
+      target_ref : ${{ github.ref }}
     
     secrets:
       docker_password: ${{ secrets.DOCKER_PASSWORD }}
