--- a/.github/workflows/clean.yml
+++ b/.github/workflows/clean.yml
@@ -1,31 +1,27 @@
 name: clean
 
-on: workflow_dispatch
+on:
+  pull_request_target:
+    types: [closed]
 
 jobs:
-  preview:
-    uses: jalantechnologies/github-ci/.github/workflows/ci.yml@vikram/feat/add-aws-ecr-image-cleanup
+  clean:
+    uses: jalantechnologies/github-ci/.github/workflows/clean.yml@v3.2.5
     concurrency:
-      group: ci-preview-${{ github.event.ref }}
+      group: ci-preview-${{ github.event.pull_request.head.ref }}
       cancel-in-progress: true
     with:
-      hosting_provider: 'AWS' # 'DIGITAL_OCEAN' or 'AWS' (Hardcoded to AWS for testing)
+      hosting_provider: ${{ vars.HOSTING_PROVIDER }}
       app_name: flask-react-template
       app_env: preview
-      app_hostname: '{1}.preview.platform.bettrhq.com'
-      branch: ${{ github.event.ref }}
-      build_args: |
-        APP_ENV=preview
-      checks: "['npm:coverage', 'npm:lint', 'compose:test']"
-      docker_registry: ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.${{ vars.AWS_REGION }}.amazonaws.com # Hardcoded to test AWS ECR and registry detection logic
-      # docker_username: ${{ vars.DOCKER_USERNAME }}
+      branch: ${{ github.event.pull_request.head.ref }}
+      docker_registry: ${{ vars.DOCKER_REGISTRY }}
+      docker_username: ${{ vars.DOCKER_USERNAME }}
       aws_cluster_name: ${{ vars.AWS_CLUSTER_NAME }}
       aws_region: ${{ vars.AWS_REGION }}
-      aws_use_ecr: true
       do_cluster_id: ${{ vars.DO_CLUSTER_ID }}
     secrets:
-      # docker_password: ${{ secrets.DOCKER_PASSWORD }}
-      doppler_token: ${{ secrets.DOPPLER_PREVIEW_TOKEN }}
+      docker_password: ${{ secrets.DOCKER_PASSWORD }}
       aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
       aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       do_access_token: ${{ secrets.DO_ACCESS_TOKEN }}
