--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -39,7 +39,7 @@ jobs:
         id: build
         uses: ./platform/.github/actions/build
         with:
-          app_name: flask-react-app
+          app_name: flask-react-template
           tag: ${{ steps.extract_branch.outputs.branch_hash }}
           build_args: APP_ENV=preview
           context: app/.
@@ -55,7 +55,7 @@ jobs:
       - name: Deploy to preview
         uses: ./platform/.github/actions/deploy
         with:
-          app_name: flask-react-app
+          app_name: flask-react-template
           app_env: preview
           app_hostname: '{1}.preview.platform.bettrhq.com'
           branch: ${{ github.event.pull_request.head.ref }}
