--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,12 +84,20 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        
+
       - name: Run dependency security audit
         shell: bash
         run: |
           echo "Running dependency security audits..."
           ls -la
+          if [ -f package.json ]; then
+            echo "::group::NPM Audit"
+            npm audit --production --audit-level=high || {
+              echo "::error ::NPM audit found vulnerabilities"
+              exit 1
+            }
+            echo "::endgroup::"
+          fi
 
   test:
     if: github.event.pull_request.draft == false
