--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,6 +98,25 @@ jobs:
             echo "::endgroup::"
           fi
 
+           if [ -f Pipfile.lock ] || [ -f requirements.txt ]; then
+            echo "::group::Python Audit"
+            pip install pip-audit
+
+            if [ -f Pipfile.lock ]; then
+              pipenv requirements > /tmp/requirements.txt
+              pip-audit -r /tmp/requirements.txt --vulnerability-service pypi || {
+                echo "::error ::pip-audit found vulnerabilities"
+                exit 1
+              }
+            elif [ -f requirements.txt ]; then
+              pip-audit -r requirements.txt --vulnerability-service pypi || {
+                echo "::error ::pip-audit found vulnerabilities"
+                exit 1
+              }
+            fi
+            echo "::endgroup::"
+          fi
+
   test:
     if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
