--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -28,7 +28,7 @@ jobs:
         id: build
         uses: ./platform/.github/actions/build
         with:
-          app_name: flask-react-template
+          app_name: flask-react-app
           tag: production
           context: app/.
           docker_registry: ${{ vars.DOCKER_REGISTRY }}
@@ -38,7 +38,7 @@ jobs:
       - name: Deploy to production
         uses: ./platform/.github/actions/deploy
         with:
-          app_name: flask-react-template
+          app_name: flask-react-app
           app_env: production
           app_hostname: flask-react-template.platform.bettrhq.com
           branch: main
