--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -141,7 +141,7 @@ jobs:
         with:
           repository: jalantechnologies/github-ci
           path: platform
-          ref: ${{ steps.ci_version.outputs.version }}
+          ref: v3.3.0-alpha.9
 
       # - name: Run integration tests
       #   run: docker compose -f docker-compose.test.yml up --exit-code-from app
