--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -60,3 +60,4 @@ jobs:
           do_access_token: ${{ secrets.DO_ACCESS_TOKEN }}
           do_cluster_id: ${{ vars.DO_CLUSTER_ID }}
           doppler_token: ${{ secrets.DOPPLER_PREVIEW_TOKEN }}
+          pull_request_number: ${{ github.event.number }}
