--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -61,3 +61,4 @@ jobs:
           do_cluster_id: ${{ vars.DO_CLUSTER_ID }}
           doppler_token: ${{ secrets.DOPPLER_PREVIEW_TOKEN }}
           pull_request_number: ${{ github.event.number }}
+          deploy_annotate_pr: true
