--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,8 +11,6 @@ jobs:
     env:
       # Optional override for this branch/PR only. Set to 'AWS' or 'DIGITAL_OCEAN'.
       OVERRIDE_HOSTING_PROVIDER: 'AWS'
-      # If override is set, use it; otherwise fall back to repo variable.
-      HOSTING_PROVIDER: ${{ env.OVERRIDE_HOSTING_PROVIDER != '' && env.OVERRIDE_HOSTING_PROVIDER || vars.HOSTING_PROVIDER }}
     concurrency:
       group: cd-preview-${{ github.event.pull_request.head.ref }}
       cancel-in-progress: true
@@ -36,8 +34,17 @@ jobs:
           BRANCH_HASH=$(sha1sum < <(printf '%s' $BRANCH_NAME) | cut -c -15)
           echo "branch_hash=$(echo $BRANCH_HASH)" >> $GITHUB_OUTPUT
 
+      - name: Resolve hosting provider
+        id: resolve
+        run: |
+          if [ -n "${{ env.OVERRIDE_HOSTING_PROVIDER }}" ]; then
+            echo "hosting_provider=${{ env.OVERRIDE_HOSTING_PROVIDER }}" >> $GITHUB_OUTPUT
+          else
+            echo "hosting_provider=${{ vars.HOSTING_PROVIDER }}" >> $GITHUB_OUTPUT
+          fi
+
       - name: Configure AWS credentials
-        if: ${{ env.HOSTING_PROVIDER == 'AWS' }}
+        if: ${{ steps.resolve.outputs.hosting_provider == 'AWS' }}
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -45,7 +52,7 @@ jobs:
           aws-region: ${{ vars.AWS_REGION }}
 
       - name: Login to Amazon ECR
-        if: ${{ env.HOSTING_PROVIDER == 'AWS' }}
+        if: ${{ steps.resolve.outputs.hosting_provider == 'AWS' }}
         id: ecr
         uses: aws-actions/amazon-ecr-login@v2
 
@@ -57,14 +64,14 @@ jobs:
           tag: ${{ steps.extract_branch.outputs.branch_hash }}
           build_args: APP_ENV=preview
           context: app/.
-          docker_registry: ${{ env.HOSTING_PROVIDER == 'AWS' && steps.ecr.outputs.registry || vars.DOCKER_REGISTRY }}
-          docker_username: ${{ env.HOSTING_PROVIDER == 'AWS' && '' || vars.DOCKER_USERNAME }}
-          docker_password: ${{ env.HOSTING_PROVIDER == 'AWS' && '' || secrets.DOCKER_PASSWORD }}
+          docker_registry: ${{ steps.resolve.outputs.hosting_provider == 'AWS' && steps.ecr.outputs.registry || vars.DOCKER_REGISTRY }}
+          docker_username: ${{ steps.resolve.outputs.hosting_provider == 'AWS' && '' || vars.DOCKER_USERNAME }}
+          docker_password: ${{ steps.resolve.outputs.hosting_provider == 'AWS' && '' || secrets.DOCKER_PASSWORD }}
 
       - name: Deploy to preview
         uses: ./platform/.github/actions/deploy
         with:
-          hosting_provider: ${{ env.HOSTING_PROVIDER }}
+          hosting_provider: ${{ steps.resolve.outputs.hosting_provider }}
           app_name: flask-react-template
           app_env: preview
           app_hostname: '{1}.preview.platform.bettrhq.com'
@@ -73,7 +80,7 @@ jobs:
           deploy_root: app/lib/kube
           deploy_labels: gh/pr=${{ github.event.number }}
           deploy_image: ${{ steps.build.outputs.image_ref }}
-          docker_registry: ${{ env.HOSTING_PROVIDER == 'AWS' && steps.ecr.outputs.registry || vars.DOCKER_REGISTRY }}
+          docker_registry: ${{ steps.resolve.outputs.hosting_provider == 'AWS' && steps.ecr.outputs.registry || vars.DOCKER_REGISTRY }}
           aws_cluster_name: ${{ vars.AWS_CLUSTER_NAME }}
           aws_region: ${{ vars.AWS_REGION }}
           do_cluster_id: ${{ vars.DO_CLUSTER_ID }}
