--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -45,7 +45,7 @@ jobs:
           target_sha : ${{ github.sha }}
           target_repository : jalantechnologies/flask-react-template
           target_ref : refs/heads/main
-          target_token : ${{ secrets.TOKEN }}
+          target_token : ${{ secrets.TRIVY_SCAN_TOKEN }}
     
 
       - name: Deploy to preview
