feat: testing with repo vaiable

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,9 +8,6 @@ jobs:
   deploy:
     if: github.event.pull_request.state == 'open' && github.event.pull_request.draft == false
     runs-on: ubuntu-latest
-    env:
-      # Optional override for this branch/PR only. Set to 'AWS' or 'DIGITAL_OCEAN'.
-      OVERRIDE_HOSTING_PROVIDER: 'DIGITAL_OCEAN'
     concurrency:
       group: cd-preview-${{ github.event.pull_request.head.ref }}
       cancel-in-progress: true
@@ -34,17 +31,8 @@ jobs:
           BRANCH_HASH=$(sha1sum < <(printf '%s' $BRANCH_NAME) | cut -c -15)
           echo "branch_hash=$(echo $BRANCH_HASH)" >> $GITHUB_OUTPUT
 
-      - name: Resolve hosting provider
-        id: resolve
-        run: |
-          if [ -n "${{ env.OVERRIDE_HOSTING_PROVIDER }}" ]; then
-            echo "hosting_provider=${{ env.OVERRIDE_HOSTING_PROVIDER }}" >> $GITHUB_OUTPUT
-          else
-            echo "hosting_provider=${{ vars.HOSTING_PROVIDER }}" >> $GITHUB_OUTPUT
-          fi
-
       - name: Configure AWS credentials
-        if: ${{ steps.resolve.outputs.hosting_provider == 'AWS' }}
+        if: ${{ vars.HOSTING_PROVIDER == 'AWS' }}
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -52,12 +40,11 @@ jobs:
           aws-region: ${{ vars.AWS_REGION }}
 
       - name: Check AWS caller identity
-        if: ${{ steps.resolve.outputs.hosting_provider == 'AWS' }}
+        if: ${{ vars.HOSTING_PROVIDER == 'AWS' }}
         run: aws sts get-caller-identity
-      
 
       - name: Login to Amazon ECR
-        if: ${{ steps.resolve.outputs.hosting_provider == 'AWS' }}
+        if: ${{ vars.HOSTING_PROVIDER == 'AWS' }}
         id: ecr
         uses: aws-actions/amazon-ecr-login@v2
 
@@ -69,14 +56,14 @@ jobs:
           tag: ${{ steps.extract_branch.outputs.branch_hash }}
           build_args: APP_ENV=preview
           context: app/.
-          docker_registry: ${{ steps.resolve.outputs.hosting_provider == 'AWS' && steps.ecr.outputs.registry || vars.DOCKER_REGISTRY }}
-          docker_username: ${{ steps.resolve.outputs.hosting_provider == 'AWS' && '' || vars.DOCKER_USERNAME }}
-          docker_password: ${{ steps.resolve.outputs.hosting_provider == 'AWS' && '' || secrets.DOCKER_PASSWORD }}
+          docker_registry: ${{ vars.HOSTING_PROVIDER == 'AWS' && steps.ecr.outputs.registry || vars.DOCKER_REGISTRY }}
+          docker_username: ${{ vars.HOSTING_PROVIDER == 'AWS' && '' || vars.DOCKER_USERNAME }}
+          docker_password: ${{ vars.HOSTING_PROVIDER == 'AWS' && '' || secrets.DOCKER_PASSWORD }}
 
       - name: Deploy to preview
         uses: ./platform/.github/actions/deploy
         with:
-          hosting_provider: ${{ steps.resolve.outputs.hosting_provider }}
+          hosting_provider: ${{ vars.HOSTING_PROVIDER }}
           app_name: flask-react-template
           app_env: preview
           app_hostname: '{1}.preview.platform.bettrhq.com'
@@ -85,7 +72,7 @@ jobs:
           deploy_root: app/lib/kube
           deploy_labels: gh/pr=${{ github.event.number }}
           deploy_image: ${{ steps.build.outputs.image_ref }}
-          docker_registry: ${{ steps.resolve.outputs.hosting_provider == 'AWS' && steps.ecr.outputs.registry || vars.DOCKER_REGISTRY }}
+          docker_registry: ${{ vars.HOSTING_PROVIDER == 'AWS' && steps.ecr.outputs.registry || vars.DOCKER_REGISTRY }}
           aws_cluster_name: ${{ vars.AWS_CLUSTER_NAME }}
           aws_region: ${{ vars.AWS_REGION }}
           do_cluster_id: ${{ vars.DO_CLUSTER_ID }}
