--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,7 +89,8 @@ jobs:
       - name: Build Docker image for scanning
         env:
           DOCKER_SCAN_TOKEN: ${{ secrets.DOCKER_SCAN_TOKEN }}
-        run: echo "$DOCKER_SCAN_TOKEN" | docker login --username myusername --password-stdin
+          DOCKER_USERNAME: ${{ vars.DOCKER_USERNAME }}
+        run: echo "$DOCKER_SCAN_TOKEN" | docker login --username $DOCKER_USERNAME --password-stdin
 
       # - name: Scan Docker image for vulnerabilities
       #   uses: aquasecurity/trivy-action@0.16.1
